Ajuste no login

--- a/_assets/less/home.less
+++ b/_assets/less/home.less
@@ -191,8 +191,7 @@
 
     &.logado {
         .banner {
-            min-height: 350px;
-
+            max-height: 350px;
             .titulo {
                 h1:after {
                     content: "Selecione um produto";
