--- a/_assets/less/geral.less
+++ b/_assets/less/geral.less
@@ -1,1 +1,14 @@
 @import "./home.less";
+
+.debug{
+    position:fixed;
+    top:0;
+    left: 0;
+    padding: 10px;
+    z-index: 99999;
+    background-color: rgba(0,0,0,0.7);
+    color:#fff;
+    font-size: 12px;
+    overflow: auto;
+    height: 100%;
+}
